# CDCsvParser

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
OLD/: App.puml  pom.xml
app/: build.gradle  google-services.json
app/src/debug/res/drawable/: ic_launcher_foreground.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseTransaction.cpp  BaseTransaction.h  BinaryUtil.h  CMakeLists.txt  DataHolder.cpp  DataHolder.h  Enums.h  FileLog.cpp  FileLog.h  MagicNumbers.h  Structs.h  TimeSpan.h  Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h  TransactionParser.cpp  TransactionParser.h  Util.h  Wallet.cpp  Wallet.h  WalletBalance.h  cdcsvparser.cpp  imp.h  library.cpp  library.h
app/src/main/cpp/Price/: AssetValue.cpp  AssetValue.h  Cache.cpp  Cache.h  PriceCache.cpp  PriceCache.h  StaticPrices.h
app/src/main/cpp/Transaction/: BaseTransaction.cpp  BaseTransaction.h  TransactionStruct.h
app/src/main/cpp/TransactionManager/: TMState.cpp  TMState.h
app/src/main/cpp/Util/: CharUtil.cpp  CharUtil.h  Util.cpp  Util.h
app/src/main/cpp/Wallet/: Wallet.cpp  Wallet.h  WalletBalance.h  WalletStruct.h
app/src/main/cpp/XML/: manual.html  rapidxml.hpp  rapidxml_print.hpp
app/src/main/res/drawable/: round_button_disabeld.xml  round_button_layer_list.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_about_us.xml  activity_assets_filter.xml  activity_login.xml  activity_main.xml  activity_overview.xml  (+13 more)
gradle/wrapper/: gradle-wrapper.properties
(+185 files in other folders)
